--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 </header>
 
-<section id="about">
+<!-- <section id="about">
     <h2>Men haqimda</h2>
     <p>
         2013-2024-yillar maktab o'quvchisi <br>
@@ -60,32 +60,75 @@
 
 
 
+</section> -->
+
+
+<section id="about">
+
+    <h2>Men haqimda</h2>
+    <div class="block">
+        <p>
+            2013-2024-yillar maktab o'quvchisi <br>
+            2024-dan buyon GulDU Filologiya va tillarni o'qitish:
+            O'zbek tili yo'nalishi talabasi
+        </p>
+    </div>
+
+    <h2>Kasbiy maqsad</h2>
+    <div class="block">
+        <p>
+            Maqsadim foydalanuvchilar uchun qulay va interaktiv web-ilovalar yaratish,
+            texnologiyalar bilan doimiy yangilanib borish.
+        </p>
+    </div>
+
+    <h2>Qiziqishlarim</h2>
+    <div class="block">
+        <p>
+            Dasturlash <br>
+            Tillar: <br>
+            Ingliz tili (B2 level) <br>
+            Rus tili
+        </p>
+    </div>
+
+    <h2>Ko'nikmalar</h2>
+    <div class="block">
+        <p>
+            Foundation: <br>
+            C++, Python <br><br>
+
+            Frontend: <br>
+            HTML, CSS, JavaScript
+        </p>
+    </div>
+
 </section>
+
 
 <section id="projects">
     <h2>Loyihalarim</h2>
     <div class="projects">
         <div class="project">
-            <!-- <img src="project1.jpg" alt="Loyiha 1"> -->
-            <h3>Loyiha 1</h3>
+            <img src="./img/cinema.png" alt="Loyiha 1">
             <p>Bu loyiha premyera filmlar haqida, unga yangi filmar joylanadi</p>
             <a href="https://marjona-me.github.io/Vue_Cinema/">Loyihaga o'tish</a>
         </div>
         <div class="project">
-            <!-- <img src="project2.jpg" alt="Loyiha 2"> -->
-            <h3>Loyiha 2</h3>
+            <img src="./img/sneakers.png" alt="Loyiha 2">
+            <!-- <h3>Loyiha 2</h3> -->
             <p>Bu loyiha Nike sneakers haqida qilingan</p>
             <a href="https://marjona-me.github.io/Nike_project/">Loyihaga o'tish</a>
         </div>
         <div class="project">
-            <!-- <img src="project3.jpg" alt="Loyiha 3"> -->
-            <h3>Loyiha 3</h3>
+            <img src="./img/planets.png" alt="Loyiha 3">
+            <!-- <h3>Loyiha 3</h3> -->
             <p>Bu loyihada qiziqarli ma'lumotlar joylangan</p>
             <a href="https://marjona-me.github.io/Planets/">Loyihaga o'tish</a>
         </div>
         <div class="project">
-            <!-- <img src="project4.jpg" alt="Loyiha 4"> -->
-            <h3>Loyiha 4</h3>
+            <img src="./img/IT.png" alt="Loyiha 4">
+            <!-- <h3>Loyiha 4</h3> -->
             <p>Bu loyihada o'quv markaz haiqa qisqacha ma'lumot bor</p>
             <a href="https://marjona-me.github.io/IT_Live/">Loyihaga o'tish</a>
         </div>
