--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="project">
             <img src="./img/IT.png" alt="Loyiha 4">
             <!-- <h3>Loyiha 4</h3> -->
-            <p>Bu loyihada o'quv markaz haiqa qisqacha ma'lumot bor</p>
+            <p>Bu loyihada o'quv markaz haqida qisqacha ma'lumot bor</p>
             <a href="https://marjona-me.github.io/IT_Live/">Loyihaga o'tish</a>
         </div>
     </div>
