--- a/index.html
+++ b/index.html
@@ -107,33 +107,98 @@
 
 
 <section id="projects">
-    <h2>Loyihalarim</h2>
-    <div class="projects">
+      <h2>Loyihalarim</h2>
+      <div class="projects">
         <div class="project">
-            <img src="./img/cinema.png" alt="Loyiha 1">
-            <p>Bu loyiha premyera filmlar haqida, unga yangi filmar joylanadi</p>
-            <a href="https://marjona-me.github.io/Vue_Cinema/">Loyihaga o'tish</a>
+          <img src="./img/FOOD100.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 1</h3> -->
+          <p>Bu loyiha tez tayyor bo'luvchi taomlar tog'risida</p>
+          <a href="https://marjona-me.github.io/FOOD100/">Loyihaga o'tish</a>
         </div>
         <div class="project">
-            <img src="./img/sneakers.png" alt="Loyiha 2">
-            <!-- <h3>Loyiha 2</h3> -->
-            <p>Bu loyiha Nike sneakers haqida qilingan</p>
-            <a href="https://marjona-me.github.io/Nike_project/">Loyihaga o'tish</a>
+          <img src="./img/Loook.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 2</h3> -->
+          <p>Bu loyiha taom buyurtma berish uchun</p>
+          <a href="https://marjona-me.github.io/Loook/">Loyihaga o'tish</a>
         </div>
         <div class="project">
-            <img src="./img/planets.png" alt="Loyiha 3">
-            <!-- <h3>Loyiha 3</h3> -->
-            <p>Bu loyihada qiziqarli ma'lumotlar joylangan</p>
-            <a href="https://marjona-me.github.io/Planets/">Loyihaga o'tish</a>
+          <img src="./img/TNW.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 3</h3> -->
+          <p>Bu loyiha axborot beruvchi sahifadan iborat</p>
+          <a href="https://marjona-me.github.io/TNW/">Loyihaga o'tish</a>
         </div>
         <div class="project">
-            <img src="./img/IT.png" alt="Loyiha 4">
-            <!-- <h3>Loyiha 4</h3> -->
-            <p>Bu loyihada o'quv markaz haqida qisqacha ma'lumot bor</p>
-            <a href="https://marjona-me.github.io/IT_Live/">Loyihaga o'tish</a>
+          <img src="./img/Sneakers.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 4</h3> -->
+          <p>Bu loyiha oyoq kiyim buyurtmasi uchun</p>
+          <a href="https://marjona-me.github.io/Sneakers/">Loyihaga o'tish</a>
         </div>
-    </div>
-</section>
+        <div class="project">
+          <img src="./img/Airpods.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 5</h3> -->
+          <p>Bu loyihada AirPods haqida ma'lumot beruvchi sahifa joylangan </p>
+          <a href="https://marjona-me.github.io/AirPods_project/"
+            >Loyihaga o'tish</a
+          >
+        </div>
+        <div class="project">
+          <img src="./img/Workit.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 6</h3> -->
+          <p>Bu loyiha Workit deb nomlanadi va amaliyot uchun tayyorlangan </p>
+          <a href="https://marjona-me.github.io/Workit/">Loyihaga o'tish</a>
+        </div>
+        <!-- <div class="project">
+          <img src="./img/Parallax.png" alt="Loyiha " /> -->
+          <!-- <h3>Loyiha 7</h3> -->
+          <!-- <p>Bu parallax mavzusi uchun amaliy loyiha</p>
+          <a href="https://marjona-me.github.io/Parallax/">Loyihaga o'tish</a>
+        </div> -->
+        <div class="project">
+          <img src="./img/Portfolio.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 8</h3> -->
+          <p>Bu portfolio uchun amaliy loyiha sifatida qilingan</p>
+          <a href="https://marjona-me.github.io/Portfolio/">Loyihaga o'tish</a>
+        </div>
+        <div class="project">
+          <img src="./img/Mening-Gulistonim.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 9</h3> -->
+          <p>Bu loyiha Guliston shahri haqidagi ma'lumotlardan iborat</p>
+          <a href="https://marjona-me.github.io/Mening-Gulistonim/">Loyihaga o'tish</a>
+        </div>
+        <div class="project">
+          <img src="./img/night_day.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 10</h3> -->
+          <p>Bu loyiha amaliy mashg'ulot uchun tayyorlangan</p>
+          <a href="https://marjona-me.github.io/night_day/">Loyihaga o'tish</a>
+        </div>
+        <div class="project">
+          <!-- <h3>Loyiha 11</h3> -->
+          <img src="./img/cinema.png" alt="Loyiha " />
+          <p>Bu loyiha premyera filmlar haqida, unga yangi filmar joylanadi</p>
+          <a href="https://marjona-me.github.io/Vue_Cinema/">Loyihaga o'tish</a>
+        </div>
+        <div class="project">
+          <img src="./img/Nike.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 12</h3> -->
+          <p>Bu loyiha Nike sneakers haqida qilingan</p>
+          <a href="https://marjona-me.github.io/Nike_project/"
+            >Loyihaga o'tish</a
+          >
+        </div>
+        <div class="project">
+          <img src="./img/planets.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 13</h3> -->
+          <p>Bu loyihada qiziqarli ma'lumotlar joylangan</p>
+          <a href="https://marjona-me.github.io/Planets/">Loyihaga o'tish</a>
+        </div>
+        <div class="project">
+          <img src="./img/IT.png" alt="Loyiha " />
+          <!-- <h3>Loyiha 14</h3> -->
+          <p>Bu loyihada o'quv markaz haqida qisqacha ma'lumot bor</p>
+          <a href="https://marjona-me.github.io/IT_Live/">Loyihaga o'tish</a>
+        </div>
+      </div>
+    </section>
 
    <section id="contact">
         <div class="container">
