--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <a href="https://marjona-me.github.io/TNW/">Loyihaga o'tish</a>
         </div>
         <div class="project">
-          <img src="./img/Sneakers.png" alt="Loyiha " />
+          <img src="./img/sneakers.png" alt="Loyiha " />
           <!-- <h3>Loyiha 4</h3> -->
           <p>Bu loyiha oyoq kiyim buyurtmasi uchun</p>
           <a href="https://marjona-me.github.io/Sneakers/">Loyihaga o'tish</a>
